syntax = "proto3";

package ticketing; 

option go_package = "/generated;ticketing";
import "google/api/annotations.proto";


// Message for a Train Reservation Request
message CreateReservationRequest {
    Reservation reservation = 1;
}

message GetReservationRequest {
    string reservation_id = 1;
}

message Reservation {
    User user = 1; //User details
    Ticket ticket = 2; //Ticket details
}

// Message for a User
message User {
    string first_name = 1; //[json_name = "firstName"]// without json_name field compiler anyways generates with camelCase
    string last_name = 2; // User's last name
    string email = 3; // User's email
}

// Message for Ticket
message Ticket {
    string from = 1; // Source
    string to = 2; // Destination
    double price = 3; // Price
    string seat = 4; // Seat number under section A or B
}

// Message for a Reservation Response - receipt
message CreateReservationResponse {
    bool success = 1; // Request success or failure
    string message = 2; // Message for success or failure cases
    string reservation_id = 3; // Reservation
}

message GetReservationResponse {
    bool success = 1; // Request success or failure
    string message = 2; // Message for success or failure cases
    Reservation reservation_details = 3; // Reservation
}

//Ticketing Service
service TicketingService {
    // A service method to reserve a ticket
    rpc CreateReservation (CreateReservationRequest) returns (CreateReservationResponse) {
        option (google.api.http) = {
            post: "/v1/reservations"
            body: "*"  // Indicate the field that will be used for the request body
        };
    }

    rpc GetReservation (GetReservationRequest) returns (GetReservationResponse) {
        option (google.api.http) = {
            get: "/v1/reservations/{reservation_id}"
        };
    }
}